package ar.edu.davinci.restaurant.dominio;

public enum FormaPago {
	EFECTIVO,
	TARJETA,
	DEBITO;
}
